# phone-code

server/: CMakeLists.txt
server/extras/proto_record/: 1.record  2.record
server/extras/xls/: AchievementGoods.json  Activity.json  ActivityOpen.json  Altar.json  Alternacts.json  Area.json  Avatar.json  BagCount.json  Bias.json  Building.json  BuildingCoin.json  BuildingCost.json  BuildingCritTimes.json  BuildingSpeed.json  BuildingUpgrade.json  BuildingView.json  Copy.json  CopyChunk.json  CopyGut.json  CopyMaterial.json  CopyReward.json  DayTaskValReward.json  Effect.json  EquipQuality.json  EquipSuit.json  Fightpower.json  FixedEquip.json  FormationCopy.json  FormationIndex.json  Global.json  Gut.json  Induct.json  Item.json  ItemMerge.json  ItemOpen.json  ItemType.json  Level.json  Market.json  MonsterFightConf.json  MonsterTalk.json  (+63 more)
server/src/: CMakeLists.txt
server/src/access/: CMakeLists.txt  access.cpp  cache.cpp  cache.h  cool.cpp  cool.h  iomgr.cpp  iomgr.h  link.cpp  master.cpp  master.h  user.cpp  user.h
server/src/authsvr/: CMakeLists.txt  authsvr.cpp  iomgr.cpp  iomgr.h  link.cpp  master.cpp  master.h  sockcoolmgr.cpp  sockcoolmgr.h
server/src/common/: CMakeLists.txt  coder.cpp  coder.h  common.h  dataproxy.cpp  dataproxy.h  dc.h  dthrow.h  dynamicmgr.cpp  dynamicmgr.h  jsonconfig.cpp  jsonconfig.h  linkdef.h  local.cpp  local.h  log.cpp  log.h  macro.h  misc.cpp  misc.h  msg.cpp  msg.h  netio.cpp  netio.h  netsingle.cpp  netsingle.h  output.cpp  output.h  pack.cpp  pack.h  parammgr.cpp  parammgr.h  remote.cpp  remote.h  settings.cpp  settings.h  signalmgr.cpp  signalmgr.h  systimemgr.cpp  systimemgr.h  (+2 more)
server/src/common/proto/: access.h  activity.h  all.h  altar.h  auth.h  back.h  bias.h  broadcast.h  building.h  chat.h  client.h  coin.h  common.h  constant.cpp  constant.h  copy.h  equip.h  fight.h  fightextable.h  formation.h  friend.h  guild.h  gut.h  item.h  mail.h  market.h  notify.h  opentarget.h  paper.h  pay.h  platform.h  present.h  rank.h  reportpost.h  server.h  shop.h  sign.h  singlearena.h  social.h  soldier.h  (+17 more)
server/src/common/proto/access/: PQAccessBroadCastList.h  PQAccessBroadCastSet.h  PQAccessEvent.h  PRAccessBroadCasetList.h
server/src/common/proto/activity/: CActivity.h  PQActivityDataLoad.h  PQActivityDataSet.h  PQActivityFactorLoad.h  PQActivityInfoList.h  PQActivityList.h  PQActivityOpenLoad.h  PQActivityOpenSet.h  (+19 more)
server/src/common/resource/: r_achievementgoodsdata.cpp  r_achievementgoodsdata.h  r_achievementgoodsext.cpp  r_achievementgoodsext.h  r_activitydata.cpp  r_activitydata.h  r_activityext.cpp  r_activityext.h  r_activityopendata.cpp  r_activityopendata.h  r_activityopenext.cpp  r_activityopenext.h  r_altardata.cpp  r_altardata.h  r_altarext.cpp  r_altarext.h  r_areadata.cpp  r_areadata.h  r_areaext.cpp  r_areaext.h  r_avatardata.cpp  r_avatardata.h  r_avatarext.cpp  r_avatarext.h  r_bagcountdata.cpp  r_bagcountdata.h  r_bagcountext.cpp  r_bagcountext.h  r_basedata.cpp  r_basedata.h  r_biasdata.cpp  r_biasdata.h  r_biasext.cpp  r_biasext.h  r_buildingcoindata.cpp  r_buildingcoindata.h  r_buildingcoinext.cpp  r_buildingcoinext.h  r_buildingcostdata.cpp  r_buildingcostdata.h  (+315 more)
server/src/common/zlib/: zconf.h
server/src/ext/: declare.cpp  declare.h  luamgr.cpp  luamgr.h  luaseq.cpp  luaseq.h
server/src/fightsvr/: CMakeLists.txt  fightsvr.cpp  master.h
server/src/gamesvr/: CMakeLists.txt  db.cpp  db.h  gamesvr.cpp  master.cpp  master.h  sql.h
server/src/packet/: CMakeLists.txt  config.cpp  config.h  file.cpp  file.h  image.cpp  image.h  packet.cpp  png2jpg.cpp  png2jpg.h
server/src/packet/json/: json_writer.cpp
server/src/proto/: CMakeLists.txt  proto.cpp
server/src/proxysvr/: CMakeLists.txt  proxysvr.cpp
server/src/public/: CMakeLists.txt  server.cpp  server.h  server_dc.h  timer.cpp  timer.h
server/src/realdbsvr/: CMakeLists.txt  realdbsvr.cpp  sql.cpp
server/src/robotsvr/: CMakeLists.txt  master.cpp  master.h  pro.cpp  robotsvr.cpp  test.cpp  test.h
server/src/sharedbsvr/: CMakeLists.txt  master.h  sharedbsvr.cpp  sql.h
server/src/so_access/: CMakeLists.txt  access_pro.cpp  broadcast_pro.cpp  broadcast_timer.cpp  pro.cpp  pro.h  raw.h  system_pro.cpp  system_timer.cpp
server/src/so_auth/: CMakeLists.txt  auth_dc.cpp  auth_dc.h  auth_pro.cpp  auth_timer.cpp  back_imp.cpp  back_imp.h  back_pro.cpp  back_timer.cpp  call_imp.cpp  call_imp.h  call_pro.cpp  call_pro.h  pro.h  system_pro.cpp  timer.cpp
server/src/so_fight/: CMakeLists.txt  fight_imp.cpp  fight_imp.h  fight_pro.cpp  fight_timer.cpp  fightlog_dc.cpp  fightlog_dc.h  gamelua.cpp  gamelua.h  link.cpp  pro.cpp  pro.h  server_pro.cpp
server/src/so_game/: CMakeLists.txt  activity_dc.cpp  activity_dc.h  activity_event.cpp  activity_event.h  activity_imp.cpp  activity_imp.h  activity_pro.cpp  altar_event.cpp  altar_event.h  altar_imp.cpp  altar_imp.h  altar_pro.cpp  altar_raw.cpp  auto_fight.cpp  back_event.cpp  back_imp.cpp  back_imp.h  back_timer.cpp  bias_imp.cpp  bias_imp.h  bias_raw.cpp  building_event.cpp  building_event.h  building_imp.cpp  building_imp.h  building_pro.cpp  building_raw.cpp  chat_event.h  chat_imp.cpp  chat_imp.h  chat_pro.cpp  chat_timer.cpp  coin_event.cpp  coin_event.h  coin_imp.cpp  coin_imp.h  coin_raw.cpp  command_imp.cpp  command_imp.h  (+249 more)
server/src/so_realdb/: CMakeLists.txt  activity_pro.cpp  auth_pro.cpp  copy_imp.cpp  copy_imp.h  copy_pro.cpp  guild_pro.cpp  link.cpp  mail_pro.cpp  pay_pro.cpp  present_pro.cpp  rank_imp.cpp  rank_imp.h  rank_pro.cpp  reportpost_imp.cpp  reportpost_imp.h  reportpost_pro.cpp  server_pro.cpp  singlearena_imp.cpp  singlearena_imp.h  singlearena_pro.cpp
server/src/so_sharedb/: CMakeLists.txt  link.cpp  market_pro.cpp  pro.h  social_pro.cpp
server/src/so_social/: CMakeLists.txt  access_pro.cpp  link.cpp  link.h  market_dc.cpp  market_dc.h  market_imp.cpp  market_imp.h  market_pro.cpp  pro.cpp  res.cpp  social_dc.cpp  social_dc.h  social_imp.cpp  social_imp.h  social_pro.cpp
server/src/socialsvr/: CMakeLists.txt  access_pro.cpp  master.cpp  master.h  socialsvr.cpp
(+1589 files in other folders)
