PROJECT(IMMORTAL)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
#SET(CMAKE_VERBOSE_MAKEFILE on)
#ADD_DEFINITIONS("-g -O2 -Wformat -Wformat-security -Wall -D_REENTRANT")

#正常开发执行
ADD_DEFINITIONS("-ggdb -DMISCHANCE_RESUME -Wall -Wno-multichar -fno-strict-aliasing")
SET(CMAKE_EXE_LINKER_FLAGS "")

#开启函数统计
#ADD_DEFINITIONS("-g -pg")
#SET(CMAKE_EXE_LINKER_FLAGS "-pg")

#IF( COMMAND CMAKE_POLICY )
#    CMAKE_POLICY( SET CMP0015 NEW )
#ENDIF( COMMAND CMAKE_POLICY )

MESSAGE(STATUS "SOURCE_DIR:${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "BINARY_DIR:${PROJECT_BINARY_DIR}")
ADD_SUBDIRECTORY(src bin)
