ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(public)
ADD_SUBDIRECTORY(gamesvr)
ADD_SUBDIRECTORY(so_game)
ADD_SUBDIRECTORY(fightsvr)
ADD_SUBDIRECTORY(so_fight)
ADD_SUBDIRECTORY(access)
ADD_SUBDIRECTORY(so_access)
ADD_SUBDIRECTORY(realdbsvr)
ADD_SUBDIRECTORY(so_realdb)
ADD_SUBDIRECTORY(authsvr)
ADD_SUBDIRECTORY(so_auth)
ADD_SUBDIRECTORY(socialsvr)
ADD_SUBDIRECTORY(so_social)
ADD_SUBDIRECTORY(sharedbsvr)
ADD_SUBDIRECTORY(so_sharedb)
ADD_SUBDIRECTORY(proto)
ADD_SUBDIRECTORY(packet)
ADD_SUBDIRECTORY(proxysvr)
ADD_SUBDIRECTORY(robotsvr)
